--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     </script>
 </head>
 <body>
-<h3>Sarafan</h3>
+<h3>Welcome social network Sarafan</h3>
 <div id="app"></div>
 <script src="/js/main.js"></script>
 </body>
