--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
     <script th:inline="javascript">
-        var frontendData = [[${frontendData}]]
+        var frontendData = [[${frontendData}]];
     </script>
 </head>
 <body>
-<h3>Welcome social network Sarafan</h3>
+<h3>Sarafan</h3>
 <div id="app"></div>
 <script src="/js/main.js"></script>
 </body>
